--- a/translate-server/Dockerfile
+++ b/translate-server/Dockerfile
@@ -1,7 +1,20 @@
+# Use an official Node.js runtime as a parent image
 FROM node:14
+
+# Set the working directory in the container
 WORKDIR /app
+
+# Copy the package.json and package-lock.json files
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install
+
+# Copy the rest of the application code
 COPY . .
+
+# Make the port 3000 available to the world outside this container
 EXPOSE 3000
+
+# Define the command to run the app
 CMD ["node", "server.js"]
