chore: Update puppeteer to puppeteer-core, add vercel to .gitignore, and update dependencies

--- a/translate-server/package.json
+++ b/translate-server/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
-    "puppeteer": "^22.13.0"
+    "puppeteer": "^22.13.0",
+    "vercel": "^34.4.0"
   }
 }
