--- a/.gitignore
+++ b/.gitignore
@@ -3554,3 +3554,4 @@ node_modules/zod/lib/helpers/util.js
 node_modules/zod/lib/locales/en.d.ts
 node_modules/zod/lib/locales/en.js
 package-lock.json
+.vercel
